--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.10.1
 Flask-Assets==0.10
 Flask-Bootstrap==3.3.0.1
 Flask-Cache==0.13.1
+Flask-Dropbox==0.3
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Mobility==0.1.1
@@ -13,12 +14,14 @@ Flask-Testing==0.4.2
 Flask-WTF==0.9.5
 Jinja2==2.7.3
 MarkupSafe==0.23
+Pillow==2.8.1
 Sijax==0.2.7
 WTForms==2.0.1
 Werkzeug==0.9.6
 beautifulsoup4==4.3.2
 blinker==1.3
 cssmin==0.2.0
+dropbox==2.2.0
 flake8==2.2.5
 flask-mongoengine==0.7.1
 gunicorn==19.1.1
@@ -31,5 +34,6 @@ pep8==1.5.7
 pyflakes==0.8.1
 pymongo==2.7.2
 requests==2.4.3
+urllib3==1.10.4
 webassets==0.10.1
 wsgiref==0.1.2
