--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+beautifulsoup4==4.3.2
+blinker==1.3
+cssmin==0.2.0
+dropbox==2.2.0
+flake8==2.2.5
 Flask==0.10.1
 Flask-Assets==0.10
 Flask-Bootstrap==3.3.0.1
@@ -6,34 +11,29 @@ Flask-Dropbox==0.3
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Mobility==0.1.1
+flask-mongoengine==0.7.1
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
 Flask-Sijax==0.3.3
 Flask-Testing==0.4.2
 Flask-WTF==0.9.5
-Jinja2==2.7.3
-MarkupSafe==0.23
-Pillow==2.8.1
-Sijax==0.2.7
-WTForms==2.0.1
-Werkzeug==0.9.6
-beautifulsoup4==4.3.2
-blinker==1.3
-cssmin==0.2.0
-dropbox==2.2.0
-flake8==2.2.5
-flask-mongoengine==0.7.1
 gunicorn==19.1.1
 itsdangerous==0.24
+Jinja2==2.7.3
+MarkupSafe==0.23
 mccabe==0.2.1
-mongoengine==0.8.7
+mongoengine==0.10.0
 nose==1.3.4
 passlib==1.6.2
 pep8==1.5.7
+Pillow==2.8.1
 pyflakes==0.8.1
-pymongo==2.7.2
+pymongo==3.0.3
 requests==2.4.3
+Sijax==0.2.7
 urllib3==1.10.4
 webassets==0.10.1
-wsgiref==0.1.2
+Werkzeug==0.9.6
+wheel==0.24.0
+WTForms==2.0.1
